# WarpGateway

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  config.yaml  pyproject.toml  run_gui.py  scripts  启动WarpGateway.bat
.github/workflows/: release.yml
plugins/: README.md
src/: __init__.py  __main__.py
src/core/: __init__.py  config.py  interceptor.py  proxy.py
src/gui/: __init__.py  main.py  tray.py  window.py
src/handlers/: __init__.py  logger.py  stats.py  warp.py
src/utils/: __init__.py  cert_manager.py  rules.py  warp_manager.py
