[project]
name = "warp-gateway"
version = "0.1.0"
description = "A proxy gateway for intercepting and managing Warp.dev requests"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "mitmproxy>=10.0.0",
    "pyyaml>=6.0",
    "PySide6>=6.6.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
